--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.12",
+    "idb": "^8.0.3",
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.525.0",
@@ -45,12 +46,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "cross-env": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.3",
     "prettier": "^3.3.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.5",
-    "cross-env": "^10.0.0",
     "typescript": "^5"
   }
 }
