--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development next dev --turbopack --port=5000",
     "build": "cross-env NODE_ENV=production next build",
-    "start": "cross-env NODE_ENV=production next start",
-    "test": "cross-env NODE_ENV=test next dev --turbopack --port=5000"
+    "start": "cross-env NODE_ENV=production next start"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.0",
